2001-07-15  Al Riddoch  <alriddoch@zepler.org>

	* src/Net/Stream.cpp, src/Objects/BaseObject.cpp,
	  src/Objects/loadDefaults.cpp: Fixed code for strict ISO
	  conformance; mainly strict use of std:: namespace.

2001-07-15  Al Riddoch  <alriddoch@zepler.org>

	* src/Message/Object.h, src/Message/Object.cpp: Removed buggy and
	  largely unused memory pool code.

	* src/Objects/loadDefaults.cpp: Removed double use of find()
	  method, and re-styled code to fit in with the rest of Atlas-C++.

	* src/Net/Stream.cpp: Switched negotiation code over to picking
	  Packed by default.

	* src/Filters/Bzip2.cpp: Modified code to use latest Bzip2 API.

	* src/Codecs/Packed.cpp: Fixed beginning and ending of stream,
	  which does not have an encoding in Packed.

	* NEWS, HACKING: updated.

2001-05-06  Al Riddoch  <alriddoch@zepler.org>

        * src/Message/Object.cpp: Added true cpp file so that class static
          member is handled cleanly.

        * src/Message/Object.h: Moved clear and operator new/delete()
          functions around so they can be inlined.

        * src/Net/Stream.cc: Added ATLAS to greeting message as required
          by the Atlas protocol.

        * src/Net/Stream.*: Made header in NegotiateHelper pass by reference.

2001-03-22  Al Riddoch  <alriddoch@zepler.org>

        * configure.in: Changed package name to Atlas-C++ to ensure it
	  is distinguishable from the other versions.

	* configure.in: Added rule to make atlas-config script.

2001-03-14  Al Riddoch  <alriddoch@zepler.org>

	* src/Codecs/Makefile.am: Install Codec header files, so codecs can
	  be used directly.

	* src/Codecs/*.cpp: Removed default value for can_read parameter from
	  definition as it is only required in declaration.

	* Added some std:: prefixes as required.

2001-03-12  Al Riddoch  <alriddoch@zepler.org>

	* Updated ROADMAP and NEWS to latest versions from stable branch.

	* Modified docs to indicate new maintainer.

2001-03-10  Al Riddoch  <alriddoch@zepler.org>
