@@ -1,6 +1,8 @@
 
 lib_LTLIBRARIES = libAtlasFilters.la
 
+libAtlasFilters_la_LDFLAGS = $(INTERFACE_VERSION)
+
 libAtlasFilters_la_SOURCES = \
         Bzip2.cpp Bzip2.h \
 	Gzip.cpp Gzip.h
