@@ -1,4 +1,7 @@
+
 lib_LTLIBRARIES = libAtlasFunky.la
+
+libAtlasFunky_la_LDFLAGS = $(INTERFACE_VERSION)
 
 libAtlasFunkyincludedir = $(includedir)/Atlas/Funky
 
