@@ -1,6 +1,8 @@
 
 lib_LTLIBRARIES = libAtlasMessage.la
 
+libAtlasMessage_la_LDFLAGS = $(INTERFACE_VERSION)
+
 libAtlasMessageincludedir = $(includedir)/Atlas/Message
 
 libAtlasMessage_la_SOURCES = \
