@@ -1,6 +1,8 @@
 
 lib_LTLIBRARIES = libAtlasNet.la
 
+libAtlasNet_la_LDFLAGS = $(INTERFACE_VERSION)
+
 libAtlasNetincludedir = $(includedir)/Atlas/Net
 
 libAtlasNet_la_SOURCES = \
